--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
 						// Create an array of typing text
 						const typingTexts = [
-						'Data Science Anthusiast  ',
+						'Data Science Enthusiast  ',
 						'Machine learning/Deep learning  ',
 						'Computer Vision/Gen AI  ',
 						];
